--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,14 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+/src/*
+!/src/*.java
+!/src/*.g4
+/src/*Lexer.java
+/src/*Parser.java 
+/src/*ParserBaseListener.java
+/src/*ParserBaseVisitor.java
+/src/*ParserListener.java
+/src/*ParserVisitor.java
+/classes
+.DS_Store
+/out
+/.idea
+/Lab.iml
